FIRST COMMIT AFTER LATEST RELEASE - Made it so that milk can be poured into a cauldron. Bottles can no longer be used on cows in order to get milk bottles: they must instead be used on a cauldron containing milk. Standing in a milk cauldron cures potion effects as if the player had drunk milk.

--- a/resources/assets/bettervanilla/lang/en_US.lang
+++ b/resources/assets/bettervanilla/lang/en_US.lang
@@ -1,6 +1,7 @@
 tile.cactus2.name=Cactus
 
 tile.lava_cauldron.name=Cauldron
+tile.milk_cauldron.name=Cauldron
 tile.water_cauldron_block.name=Cauldron
 item.water_cauldron.name=Cauldron
 item.lava_bottle.name=Lava Bottle
