--- a/resources/assets/bettervanilla/lang/en_US.lang
+++ b/resources/assets/bettervanilla/lang/en_US.lang
@@ -4,7 +4,6 @@ tile.lava_cauldron.name=Cauldron
 tile.milk_cauldron.name=Cauldron
 tile.water_cauldron_block.name=Cauldron
 item.water_cauldron.name=Cauldron
-item.lava_bottle.name=Lava Bottle
 
 tile.colored_bed_block.name=Colored Bed
 item.colored_bed.white.name=White Bed
@@ -69,6 +68,6 @@ entity.pluckable_chicken.name=Chicken
 
 item.fleshy_hide.name=Fleshy Hide
 
-
-
+potion.fire=Instant Fire
+potion.fire.postfix=Lava Bottle
 
