Turned the milk potion into an actual ItemPotion and added a brewing … recipe for the splash version using Brewing-API. Next up for similar treatment: Ender Potion, and maybe a Splash Water Bottle and Splash versions for some of the existing potions.

--- a/resources/assets/bettervanilla/lang/en_US.lang
+++ b/resources/assets/bettervanilla/lang/en_US.lang
@@ -70,4 +70,6 @@ item.fleshy_hide.name=Fleshy Hide
 
 potion.fire=Instant Fire
 potion.fire.postfix=Lava Bottle
+potion.cure=Instant Cure
+potion.cure.postfix=Milk Bottle
 
